tests/other-tests/tests/expand/fail/unresolved_import.error.txt
error[E0432]: unresolved import `non_existent_crate`
 --> /tests/expand/fail/unresolved_import.rs:1:5
  |
1 | use non_existent_crate;
  |     ^^^^^^^^^^^^^^^^^^ no external crate `non_existent_crate`
For more information about this error, try `rustc --explain E0432`.
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
